--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "mysql2": "^1.6.5",
     "node": "^12.4.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "sequelize": "^5.8.7",
+    "sequelize-cli": "^5.4.0"
   }
 }
