--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "bcrypt": "^3.0.6",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.1",
     "mysql2": "^1.6.5",
     "node": "^12.4.0",
     "nodemon": "^1.19.1",
