--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
@@ -22,6 +23,8 @@
     "mysql2": "^1.6.5",
     "node": "^12.4.0",
     "nodemon": "^1.19.1",
+    "path": "^0.12.7",
+    "pug": "^2.0.3",
     "sequelize": "^5.8.7",
     "sequelize-cli": "^5.4.0"
   }
