--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mysql2": "^1.6.5",
     "node": "^12.4.0",
     "nodemon": "^1.19.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pug": "^2.0.3",
     "sequelize": "^5.8.7",
