--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.16.1",
     "faker": "^4.1.0",
     "imgur-node-api": "^0.1.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "multer": "^1.4.1",
@@ -30,6 +31,7 @@
     "node": "^12.4.0",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^7.11.0",
